Fix new address flickering, add missing sprites

--- a/src/components/Receive.module.css
+++ b/src/components/Receive.module.css
@@ -13,6 +13,12 @@
   height: 1.5rem;
 }
 
+.qr-container {
+  display: flex;
+  justify-content: center;
+  min-height: 16.25rem;
+}
+
 .receive-placeholder-qr-container {
   width: 13.5rem;
   margin-bottom: 0;
